[package]
name = "abbs-update-checksum"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
abbs-update-checksum-core = { path = "./abbs-update-checksum-core" }
eyre = "0.6.12"
walkdir = "2.5.0"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread"] }
simplelog = "0.12.2"
indicatif = "0.17.8"
dashmap = "6.1.0"
log = "0.4"

[workspace]
members = ["abbs-update-checksum-core"]
